Create basic Checkout page without Css styling.

--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -6,8 +6,92 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="">
-        <h1>This is still working...!</h1>
-    </form>
+    <div>
+        <form action="">
+            <h1>Our Brand</h1>
+            
+            <div>
+                <h5>Contact Infortion</h5>
+                <div>
+                    <input type="text" placeholder="First name">
+                    <input type="text" placeholder="Last name">
+                </div>
+    
+                <h5>Address Informations</h5>
+                <div>
+                    <div>
+                        <input type="text" placeholder="Street">
+                    </div>
+                    <div>
+                        <input type="text" placeholder="Appartment">
+                    </div>
+                    <div>
+                        <input type="text" placeholder="City">
+                    </div>
+                    
+                </div>
+            </div>
+    
+            <div>
+                <input type="text" placeholder="State">
+                <input type="text" placeholder="Zip code">
+            </div>
+        </form>
+
+        <div class="product-details">
+            <img src="" alt="card-prodct">
+            <p>Product description</p>
+            <p>Product Price</p>
+            <h6>Subtotal</h6>
+            <input type="number" step="5" min="0">
+
+        </div>
+    </div>
+    <div>
+        <h4>Your Order</h4>
+        <div>
+            <h5>Express Checkout</h5>
+        <div>
+            <section>
+                <label for="apple"></label>
+                <input type="radio" id="apple" name="paymentMethod">
+                <img src="" alt="Apple Pay" class="express-checkout">
+            </section>
+            <section>
+                <label for="PayPal"></label>
+                <input type="radio" id="PayPal" name="paymentMethod">
+                <img src="" alt="PayPal" class="express-checkout">
+            </section>
+            <section>
+                <label for="goole"></label>
+                <input type="radio" id="goole" name="paymentMethod">
+                <img src="" alt="Google Pay" class="express-checkout">
+            </section>
+
+
+      
+
+        <div>
+            <label for="card-name">Name on the Crd</label><br>
+            <input type="text" >
+        </div>
+        <div>
+            <label for="card-name">Credit Number</label><br>
+            <input type="number" >
+        </div>
+        <div>
+            <label for="experation">Experation</label><br>
+            <input type="date">
+        </div>
+        <div>
+            <label for="cvv">CVV</label><br>
+            <input type="number">
+        </div>
+        </div>
+
+        </div>
+
+
+    </div>
 </body>
 </html>
